--- a/feedback/templates/minimal.html
+++ b/feedback/templates/minimal.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>{% if page.title %} {{ page.title }} | {% endif %} {{ site.name }}</title>
+        <title>{{ page.title }}</title>
 {% compress css %}
         <link rel="stylesheet" type="text/x-scss" href="{% static "feedback-styles.scss" %}">
 {% endcompress %}
