--- a/feedback/templates/feedback/feedback_form.html
+++ b/feedback/templates/feedback/feedback_form.html
@@ -2,8 +2,17 @@
 {% load i18n %}
 {% block title %}{{ block.super }} &mdash; {% trans "Give Us Feedback" %}{% endblock title %}
 {% block main %}
-<div class="feedback-body">
-    <h4>{% trans "Give Us Feedback" %}</h4>
+<div class="feedback-body container-fluid">
+    <div class="row">
+      <div class="col">
+        <h4>{% trans "Give Us Feedback" %}</h4>
+      </div>
+      <div class="col">
+        <button type="button" class="close close-feedback" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    </div>
     <hr>
     <form action="{% url 'feedback-add' %}" method="post">
     {% csrf_token %}
